--- a/src/components/global/header/styles.module.scss
+++ b/src/components/global/header/styles.module.scss
@@ -1,7 +1,6 @@
 @use '../../../styles/variables.scss' as vars;
 
 .header {
-  width: 100%;
   height: 80px;
   background-color: var(--color-bg-primary);
   position: sticky;
@@ -11,14 +10,12 @@
 
 .container {
   height: 100%;
-  padding: 0 var(--spacing-120);
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: var(--spacing-32);
-  max-width: 1200px;
+  width: 1200px;
   margin: 0 auto;
-
   > * {
     white-space: nowrap;
   }
@@ -30,7 +27,8 @@
 
 .desktopLinks {
   display: flex;
-  flex-grow: 1;    gap: var(--spacing-32);
+  flex-grow: 1;
+  gap: var(--spacing-32);
   align-items: center;
 }
 
@@ -42,6 +40,7 @@
 
   .container {
     padding: 0 var(--spacing-8);
+    width: 100%;
   }
 
   .burgerButton {
