--- a/src/templates/masonryLayoutWrapper/styles.module.scss
+++ b/src/templates/masonryLayoutWrapper/styles.module.scss
@@ -26,7 +26,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .masonryColumn > div {
